# portoser

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  NOTICE  README.md  SECURITY.md  TROUBLESHOOTING.md  bootstrap_server.py  check-services.ts  cluster-compose-local-builds.sh  cluster-compose.sh  cluster.conf.example  compose.sh  docker-compose.yml  install_ca_on_hosts.sh  migrate_services.sh  portoser  postgres_pw_sync.sh  registry.example.yml  service_distribution.example.yml
web/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  _warnings_setup.py  config.py  keycloak_client.py  logging_config.py  main.py  migrate_registration_tokens.py  pyproject.toml  requirements.txt  service_auth.py  vault_client.py
web/backend/auth/: __init__.py  config.py  dependencies.py  device_auth.py  middleware.py  models.py  validator.py  websocket.py
web/backend/middleware/: audit_logging.py  memory_rate_limiter.py  rate_limiter.py  security_headers.py
web/backend/models/: __init__.py  certificates.py  cluster.py  dependencies.py  deployment.py  device.py  diagnostic.py  health.py  history.py  knowledge.py  mcp.py  metrics.py  registry_admin.py  uptime.py
web/backend/monitoring/: __init__.py  device_metrics.py  grafana_dashboard.json  prometheus.py  prometheus_alerts.yml
web/backend/routers/: __init__.py  auth.py  certificates.py  cluster.py  config.py  dependencies.py  deployment.py  device_ownership.py  devices.py  devices_metrics.py  diagnostics.py  health.py  history.py  knowledge.py  machines.py  mcp.py  metrics.py  metrics_health.py  prometheus.py  services_admin.py  status.py  uptime.py  vault.py  websocket_metrics.py
web/backend/services/: __init__.py  cache_service.py  cli_runner.py  cluster_manager.py  dependency_service.py  device_health_monitor.py  health_monitor.py  history_manager.py  knowledge_base.py  mcp_audit.py  mcp_auth.py  mcp_dependencies.py  mcp_postgres_db.py  metrics_cache.py  metrics_collector.py  metrics_prefetcher.py  metrics_queue.py  metrics_service.py  metrics_timeout.py  portoser_cli.py  registry_helpers.py  registry_service.py  startup.py  token_service.py  uptime_service.py  websocket_manager.py  worker_manager.py
web/backend/tests/: __init__.py  conftest.py  load_test.py  test_auth_router.py  test_auth_security.py  test_bug_fixes.py  test_certificates_parser.py  test_circuit_breaker.py  test_cli_runner.py  test_cli_timeouts.py  test_cluster_api.py  test_cluster_manager_security.py  test_device_ws.py  test_inline_machines.py  test_knowledge_reader.py  test_metrics_cache.py  test_metrics_models.py  test_metrics_null_safety.py  test_metrics_queue.py  test_rate_limiter.py  test_registry_admin_models.py  test_registry_helpers.py  test_registry_port_validation.py  (+4 more)
(+312 files in other folders)
